--- a/css/general.css
+++ b/css/general.css
@@ -4,12 +4,12 @@
 
 @font-face {
     font-family: "RalewayBlack";
-  src: url("../fonts/Raleway-Black.ttf");
+    src: url("../fonts/Raleway-Black.ttf");
 }
 
 @font-face {
     font-family: "RalewayLight";
-    src: url("Raleway-Light.ttf");
+    src: url("../fonts/Raleway-Light.ttf");
 }
 
 
@@ -35,9 +35,10 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100%;
   margin: 0;
-  padding: 0 auto;
   barckground-position: center center;
+  background-size: cover;
   overflow: hide;
+  text-align: center;
 }
 
 .darkBG {
