--- a/locative-media/styles.css
+++ b/locative-media/styles.css
@@ -1,5 +1,25 @@
-body{
+html, body{
 	font-family: Helvetica;
 	background-color: #eee;
 	color: #111;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+#mapid {
+	width: 100%;
+	height: 100%;
+	z-index: 0;
+}
+
+#overlay {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+}
+
+#toggle {
+	pointer-events: auto;
 }
