--- a/locative-media/styles.css
+++ b/locative-media/styles.css
@@ -20,36 +20,31 @@ html, body{
 	height: 100%;
 	padding: 20px;
 	box-sizing: border-box;
+	text-align: center;
+	background-color: rgba(255, 255, 255, 0.5);
 }
 
 #overlay.off {
-	text-align: center;
-	background-color: rgba(255,255,255,0.5);
-}
-
-#overlay.on {
 	pointer-events: none;
+	background-color: rgba(255, 255, 255, 0);
 }
 
-#overlay.on #header {
+#overlay.off #header, #overlay.off #description {
 	display: none;
 }
 
+/* Play/Pause button */
 #toggle {
 	pointer-events: auto;
-	font-size: 30px;
+	font-size: 40px;
 	cursor: pointer;
 	text-decoration: none;
 	color: blue;
 }
 
-#overlay.on #toggle {
+ /*Make the pause button go to the bottom left */
+#overlay.off #toggle {
 	position: absolute;
 	bottom: 10px;
 	left: 10px;
-	font-size: 40px;
-}
-
-#overlay.on #description {
-	display: none;
 }
